* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.19...dev][Unreleased]]

*** Added
+ *tetraku*: Add models data and ansatzes data into an individual package named =tetraku=.
+ *tetragono*: Configuration use =owner= to get the owner sampling lattice object of this configuration object, instead
  of the previous =_owner=.
*** Changed
+ *tetragono*: Rename multiple product state to ansatz product state, to avoid the ambiguous abbreivation. Rename all
  =mp_xxx= to =ap_xxx= in tetragono shell.
*** Deprecated
+ *tetragono*: =_owner= of Configuration for sampling lattice is deprecated, use =owner= instead.
*** Removed
*** Fixed
+ *TAT.hpp*: Fix a bug in windows platform when copying an edge with fermi symmetry.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...v0.2.19][v0.2.19]] - 2022-07-13

*** Added
+ *tetragono*: Add a new command =gm_hamiltonian= to replace the Hamiltonian of the existent sampling lattice.
+ *tetragono*: Add =conjugate_gradient_method_error= option for =gm_run= and =mp_run= in teragono shell. The conjugate
  gradient will stop if =conjugate_gradient_method_step= reached OR =conjugate_gradient_method_error= reached. Set
  =conjugate_gradient_method_error= to =0.0= to skip error checking or set =conjugate_gradient_method_step= to =-1= to
  skip step checking.
*** Changed
+ *lazy*: Using a manual stack to run the recursion now, to avoid the recursion depth limit.
*** Fixed
+ *tetragono*: Fix a problem when calling =gm_data_load= in tetragono shell.
+ *tetragono*: Fix a bug in calculating the natural gradient of a complex tensor network state.
+ *tetragono*: Fix a bug in calculating the expect and the deviation in the ergodic sampling with subspace restricted.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.17...v0.2.18][v0.2.18]] - 2022-06-28

*** Added
+ *tetragono*: Add compatibility support for python3.8.
+ *tetragono*: Add =ex_create= command for tetragono shell, which calls =abstract_state= to create an =exact_lattice=.