@@ -26,16 +26,231 @@
 #include "../utility/timer.hpp"
 
 namespace TAT {
+   template<typename ScalarType, typename Symmetry, typename Name>
+   Tensor<ScalarType, Symmetry, Name>
+   trace_without_fuse(const Tensor<ScalarType, Symmetry, Name>& tensor, const std::unordered_set<std::pair<Name, Name>>& trace_names);
+
+   template<typename ScalarType, typename Symmetry, typename Name>
+   Tensor<ScalarType, Symmetry, Name> trace_with_fuse(
+         const Tensor<ScalarType, Symmetry, Name>& tensor,
+         const std::unordered_set<std::pair<Name, Name>>& trace_names,
+         const std::unordered_map<Name, std::pair<Name, Name>>& fuse_names);
+
    inline timer trace_guard("trace");
 
    template<typename ScalarType, typename Symmetry, typename Name>
-   Tensor<ScalarType, Symmetry, Name> Tensor<ScalarType, Symmetry, Name>::trace(const std::unordered_set<std::pair<Name, Name>>& trace_names) const {
+   Tensor<ScalarType, Symmetry, Name> Tensor<ScalarType, Symmetry, Name>::trace(
+         const std::unordered_set<std::pair<Name, Name>>& trace_names,
+         const std::unordered_map<Name, std::pair<Name, Name>>& fuse_names) const {
       auto pmr_guard = scope_resource(default_buffer_size);
       auto timer_guard = trace_guard();
+      if constexpr (Symmetry::length == 0) {
+         return trace_with_fuse(*this, trace_names, fuse_names);
+      } else {
+         if constexpr (debug_mode) {
+            if (fuse_names.size() != 0) {
+               detail::error("Cannot fuse edge of symmetric tensor");
+            }
+         }
+         return trace_without_fuse(*this, trace_names);
+      }
+   }
 
+   template<typename ScalarType, typename Symmetry, typename Name>
+   Tensor<ScalarType, Symmetry, Name> trace_with_fuse(
+         const Tensor<ScalarType, Symmetry, Name>& tensor,
+         const std::unordered_set<std::pair<Name, Name>>& trace_names,
+         const std::unordered_map<Name, std::pair<Name, Name>>& fuse_names) {
+      auto rank = tensor.get_rank();
+      auto trace_rank = trace_names.size();
+      auto fuse_rank = fuse_names.size();
+      auto free_rank = rank - 2 * trace_rank - 2 * fuse_rank;
+
+      // transpose to a_ji = b_{kkjji}, this is the most fast way to trace
+      auto trace_1_names = pmr::vector<Name>();
+      auto trace_2_names = pmr::vector<Name>();
+      auto fuse_1_names = pmr::vector<Name>();
+      auto fuse_2_names = pmr::vector<Name>();
+      trace_1_names.reserve(trace_rank);
+      trace_2_names.reserve(trace_rank);
+      fuse_1_names.reserve(fuse_rank);
+      fuse_2_names.reserve(fuse_rank);
+
+      auto nonfree_names = pmr::unordered_set<Name>(unordered_parameter * rank);
+
+      auto fuse_split_plan = pmr::vector<std::tuple<Name, edge_segment_t<Symmetry>>>();
+      fuse_split_plan.reserve(fuse_rank);
+
+      // traced edge
+      auto valid_index = pmr::vector<bool>(rank, true);
+      for (auto i = rank; i-- > 0;) {
+         // if possible, let names order unchanged
+
+         // trace
+         if (valid_index[i]) {
+            const auto& name_to_find = tensor.names[i];
+            const Name* name_correspond = nullptr;
+            for (const auto& [name_1, name_2] : trace_names) {
+               if (name_1 == name_to_find) {
+                  name_correspond = &name_2;
+                  break;
+               }
+               if (name_2 == name_to_find) {
+                  name_correspond = &name_1;
+                  break;
+               }
+            }
+            if (name_correspond) {
+               // found in trace_names
+               trace_1_names.push_back(*name_correspond);
+               trace_2_names.push_back(name_to_find);
+               // trace_1 is in front of trace_2
+               // name_correspond is in front of name_to_find
+
+               nonfree_names.insert(name_to_find);
+               nonfree_names.insert(*name_correspond);
+               valid_index[i] = false;
+               auto index_correspond = tensor.get_rank_from_name(*name_correspond);
+               valid_index[index_correspond] = false;
+            }
+         }
+
+         // fuse
+         if (valid_index[i]) {
+            const auto& name_to_find = tensor.names[i];
+            const Name* name_correspond = nullptr;
+            const Name* name_fused = nullptr;
+            for (const auto& [fused_name, name_1_name_2] : fuse_names) {
+               const auto& [name_1, name_2] = name_1_name_2;
+               name_fused = &fused_name;
+
+               if (name_1 == name_to_find) {
+                  name_correspond = &name_2;
+                  break;
+               }
+               if (name_2 == name_to_find) {
+                  name_correspond = &name_1;
+                  break;
+               }
+            }
+            if (name_correspond) {
+               // found in fuse_names
+               fuse_1_names.push_back(*name_correspond);
+               fuse_2_names.push_back(name_to_find);
+               fuse_split_plan.push_back({*name_fused, {tensor.edges(i).segment}});
+               // fuse_1 is in front of fuse_2
+               // name_correspond is in front of name_to_find
+
+               nonfree_names.insert(name_to_find);
+               nonfree_names.insert(*name_correspond);
+               valid_index[i] = false;
+               auto index_correspond = tensor.get_rank_from_name(*name_correspond);
+               valid_index[index_correspond] = false;
+            }
+         }
+      }
+      std::reverse(trace_1_names.begin(), trace_1_names.end());
+      std::reverse(trace_2_names.begin(), trace_2_names.end());
+      std::reverse(fuse_1_names.begin(), fuse_1_names.end());
+      std::reverse(fuse_2_names.begin(), fuse_2_names.end());
+      std::reverse(fuse_split_plan.begin(), fuse_split_plan.end());
+
+      auto result_names = std::vector<Name>();
+      result_names.reserve(fuse_rank + free_rank);
+      for (const auto& [fuse_name, fuse_edge] : fuse_split_plan) {
+         result_names.push_back(fuse_name);
+      }
+
+      auto free_names = pmr::vector<Name>();
+      free_names.reserve(free_rank);
+      auto free_split_plan = pmr::vector<std::tuple<Name, edge_segment_t<Symmetry>>>();
+      free_split_plan.reserve(free_rank);
+      for (Rank i = 0; i < rank; i++) {
+         const auto& name = tensor.names[i];
+         if (auto found = nonfree_names.find(name); found == nonfree_names.end()) {
+            // it is free name
+            const auto& this_edge = tensor.edges(i);
+            result_names.push_back(name);
+            free_names.push_back(name);
+            free_split_plan.push_back({name, {this_edge.segment}});
+         }
+      }
+
+      auto merged_tensor = tensor.edge_operator_implement(
+            empty_list<std::pair<Name, empty_list<std::pair<Name, edge_segment_t<Symmetry>>>>>(),
+            empty_list<Name>(),
+            pmr::map<Name, pmr::vector<Name>>{
+                  {InternalName<Name>::Trace_1, std::move(trace_1_names)},
+                  {InternalName<Name>::Trace_2, std::move(trace_2_names)},
+                  {InternalName<Name>::Trace_3, std::move(fuse_1_names)},
+                  {InternalName<Name>::Trace_4, std::move(fuse_2_names)},
+                  {InternalName<Name>::Trace_5, std::move(free_names)}},
+            std::vector<Name>{
+                  InternalName<Name>::Trace_1,
+                  InternalName<Name>::Trace_2,
+                  InternalName<Name>::Trace_3,
+                  InternalName<Name>::Trace_4,
+                  InternalName<Name>::Trace_5},
+            false,
+            empty_list<Name>(), // split
+            empty_list<Name>(), // reverse
+            empty_list<Name>(), // reverse
+            empty_list<Name>(), // merge
+            empty_list<std::pair<Name, empty_list<std::pair<Symmetry, Size>>>>());
+
+      auto traced_tensor = Tensor<ScalarType, Symmetry, Name>(
+                                 {InternalName<Name>::Trace_4, InternalName<Name>::Trace_5},
+                                 {merged_tensor.edges(3), merged_tensor.edges(4)})
+                                 .zero();
+
+      // move data
+      const Size trace_size = merged_tensor.edges(0).total_dimension();
+      const Size fuse_size = merged_tensor.edges(2).total_dimension();
+      const Size free_size = merged_tensor.edges(4).total_dimension();
+
+      ScalarType* destination_block = traced_tensor.storage().data();
+      const ScalarType* source_block = merged_tensor.storage().data();
+
+      const auto const_free_size_variant = to_const_integral<Size, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16>(free_size);
+
+      std::visit(
+            [&](const auto& const_free_size) {
+               const Size free_size = const_free_size.value();
+               for (auto k = 0; k < trace_size; k++) {
+                  for (auto j = 0; j < fuse_size; j++) {
+                     ScalarType* __restrict destination_data = destination_block + j * free_size;
+                     const ScalarType* __restrict source_data = source_block + (((k * trace_size + k) * fuse_size + j) * fuse_size + j) * free_size;
+                     for (auto i = 0; i < free_size; i++) {
+                        // dst[j, i] += src[k, k, j, j, i];
+                        destination_data[i] += source_data[i];
+                     }
+                  }
+               }
+            },
+            const_free_size_variant);
+
+      auto result = traced_tensor.edge_operator_implement(
+            pmr::map<Name, pmr::vector<std::tuple<Name, edge_segment_t<Symmetry>>>>{
+                  {InternalName<Name>::Trace_4, std::move(fuse_split_plan)},
+                  {InternalName<Name>::Trace_5, std::move(free_split_plan)}},
+            empty_list<Name>(),
+            empty_list<std::pair<Name, empty_list<Name>>>(),
+            std::move(result_names),
+            false,
+            empty_list<Name>(),
+            empty_list<Name>(),
+            empty_list<Name>(),
+            empty_list<Name>(),
+            empty_list<std::pair<Name, empty_list<std::pair<Symmetry, Size>>>>());
+      return result;
+   }
+
+   template<typename ScalarType, typename Symmetry, typename Name>
+   Tensor<ScalarType, Symmetry, Name>
+   trace_without_fuse(const Tensor<ScalarType, Symmetry, Name>& tensor, const std::unordered_set<std::pair<Name, Name>>& trace_names) {
       constexpr bool is_fermi = Symmetry::is_fermi_symmetry;
 
-      auto rank = get_rank();
+      auto rank = tensor.get_rank();
       auto trace_rank = trace_names.size();
       auto free_rank = rank - 2 * trace_rank;
 
@@ -58,7 +273,7 @@ namespace TAT {
       for (auto i = rank; i-- > 0;) {
          // if possible, let names order unchanged
          if (valid_index[i]) {
-            const auto& name_to_find = names[i];
+            const auto& name_to_find = tensor.names[i];
             const Name* name_correspond = nullptr;
             for (const auto& [name_1, name_2] : trace_names) {
                if (name_1 == name_to_find) {
@@ -75,7 +290,7 @@ namespace TAT {
                // trace_1 arrow true, trace_2 arrow false
                // so that (a b c)(b+ a+) = (c)
                if constexpr (is_fermi) {
-                  if (edges(i).arrow) {
+                  if (tensor.edges(i).arrow) {
                      // need reversed
                      traced_reverse_flag.insert(name_to_find);
                      reverse_names.insert(name_to_find);
@@ -89,19 +304,20 @@ namespace TAT {
 
                traced_names.insert(name_to_find);
                traced_names.insert(*name_correspond);
-               auto index_correspond = get_rank_from_name(*name_correspond);
+               auto index_correspond = tensor.get_rank_from_name(*name_correspond);
                valid_index[index_correspond] = false;
 
                if constexpr (Symmetry::length != 0) {
                   // order of edge symmetry segment
                   const auto& name_1 = *name_correspond;
                   const auto& name_2 = name_to_find;
-                  const auto& edge_1 = edges(index_correspond);
-                  const auto& edge_2 = edges(i);
+                  const auto& edge_1 = tensor.edges(index_correspond);
+                  const auto& edge_2 = tensor.edges(i);
                   // same to contract delete dimension
                   auto delete_unused_dimension = [](const auto& edge_this, const auto& edge_other, const auto& name_this, auto& delete_this) {
                      if constexpr (debug_mode) {
-                        // MSVC cannot recognize is_fermi as constexpr value, and it complains to capture it, so use the original expression here.
+                        // MSVC cannot recognize is_fermi as constexpr value, and it complains to capture it, so use the original expression
+                        // here.
                         if constexpr (Symmetry::is_fermi_symmetry) {
                            if (edge_this.arrow == edge_other.arrow) {
                               detail::error("Different Fermi Arrow to Trace");
@@ -171,6 +387,8 @@ namespace TAT {
             }
          }
       }
+      std::reverse(trace_1_names.begin(), trace_1_names.end());
+      std::reverse(trace_2_names.begin(), trace_2_names.end());
 
       // free edge
       auto result_names = std::vector<Name>();
@@ -179,10 +397,10 @@ namespace TAT {
       result_names.reserve(free_rank);
       split_plan.reserve(free_rank);
       for (Rank i = 0; i < rank; i++) {
-         const auto& name = names[i];
+         const auto& name = tensor.names[i];
          if (auto found = traced_names.find(name); found == traced_names.end()) {
             // it is free name
-            const auto& this_edge = edges(i);
+            const auto& this_edge = tensor.edges(i);
             result_names.push_back(name);
             split_plan.push_back({name, {this_edge.segment}});
             if constexpr (is_fermi) {
@@ -193,7 +411,7 @@ namespace TAT {
          }
       }
 
-      auto merged_tensor = edge_operator_implement(
+      auto merged_tensor = tensor.edge_operator_implement(
             empty_list<std::pair<Name, empty_list<std::pair<Name, edge_segment_t<Symmetry>>>>>(),
             reverse_names,
             pmr::map<Name, pmr::vector<Name>>{
